# CheckTool

./: CMakeLists.txt
cmake/modules/: FindLibNexus.cmake  FindLibNxClient.cmake
src/: main.cpp
